--- a/index.html
+++ b/index.html
@@ -1,27 +1,88 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Générateur de Portefeuilles Froids Crypto</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Générateur de Portefeuilles Crypto Hors-Ligne</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://cryptologos.cc/logos/bitcoin-btc-logo.png" type="image/png">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f7fa;
+      color: #333;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    header h1 {
+      font-size: 2.4em;
+      margin-bottom: 10px;
+      color: #0057ff;
+    }
+    .banner {
+      display: block;
+      margin: 20px auto;
+      max-width: 100%;
+      border-radius: 12px;
+    }
+    ul {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+    .contact {
+      margin-top: 30px;
+      font-size: 1.1em;
+    }
+    .contact a {
+      color: #0057ff;
+      text-decoration: none;
+    }
+    .cta-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #0057ff;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 1em;
+      text-align: center;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; padding: 40px; max-width: 700px; margin: auto;">
-  <h1>🔐 Générateur de Portefeuilles Crypto Hors-Ligne</h1>
-  <p>
-    Nous créons des portefeuilles ultra-sécurisés pour Bitcoin, Ethereum, Monero et autres cryptomonnaies, générés sans connexion internet pour garantir une confidentialité totale.
-  </p>
+<body>
+  <div class="container">
+    <header>
+      <h1>🔐 Générateur de Portefeuilles Crypto Hors-Ligne</h1>
+      <p>Sécurisez vos cryptomonnaies avec des portefeuilles physiques indépendants de toute connexion.</p>
+      <img src="banner-wallet.png" alt="Bannière crypto cold wallet" class="banner">
+    </header>
 
-  <h2>Nos services :</h2>
-  <ul>
-    <li>Création de wallets papier avec phrase de récupération (12 ou 24 mots)</li>
-    <li>Génération en direct, sans stockage numérique</li>
-    <li>Export sur support papier, fichier PDF ou tag NFC</li>
-    <li>Utilisation de standards BIP officiels pour compatibilité maximale</li>
-    <li>Support multi-cryptomonnaies : BTC, ETH, XMR, LTC, etc.</li>
-  </ul>
+    <section>
+      <h2>✅ Ce que nous proposons :</h2>
+      <ul>
+        <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
+        <li>Export sur support papier, PDF ou tag NFC</li>
+        <li>Compatible avec Bitcoin (BTC), Ethereum (ETH), Monero (XMR), Litecoin (LTC) et autres</li>
+        <li>Basé sur les standards BIP officiels (BIP39, BIP44)</li>
+        <li>Aucune trace numérique conservée ou partagée</li>
+      </ul>
+    </section>
 
-  <h2>Contact :</h2>
-  <p>Email : <strong>llaymass4@gmail.com</strong></p>
-  <p>Telegram : <a href="https://t.me/t71y8" target="_blank">@t71y8</a></p>
+    <section class="contact">
+      <h2>📬 Contact :</h2>
+      <p>✉️ Email : <a href="mailto:llaymass4@gmail.com">llaymass4@gmail.com</a></p>
+      <p>📱 Telegram : <a href="https://t.me/t71y8" target="_blank">@t71y8</a></p>
+      <a href="mailto:llaymass4@gmail.com" class="cta-button">📩 Demander un portefeuille</a>
+    </section>
+  </div>
 </body>
 </html>
