--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <section>
-      <h2>✅ Ce que nous proposons :</h2>
+      <h2> Ce que nous proposons :</h2>
       <ul>
         <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
         <li>Export sur support papier, PDF ou tag NFC</li>
