--- a/index.html
+++ b/index.html
@@ -2,87 +2,86 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Générateur de Portefeuilles Crypto Hors-Ligne</title>
+  <title>Générateur de Cold Wallets</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://cryptologos.cc/logos/bitcoin-btc-logo.png" type="image/png">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f5f7fa;
+      background: #f6f9fc;
       color: #333;
+    }
+    header {
+      background: #0057ff;
+      color: white;
+      padding: 30px;
+      text-align: center;
+    }
+    nav {
+      background: #003bb3;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
     }
     .container {
       max-width: 900px;
       margin: auto;
       padding: 40px 20px;
     }
-    header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    header h1 {
-      font-size: 2.4em;
-      margin-bottom: 10px;
-      color: #0057ff;
-    }
     .banner {
+      width: 100%;
+      max-width: 600px;
       display: block;
       margin: 20px auto;
-      max-width: 100%;
       border-radius: 12px;
     }
     ul {
       font-size: 1.1em;
       line-height: 1.6;
     }
-    .contact {
-      margin-top: 30px;
-      font-size: 1.1em;
-    }
-    .contact a {
-      color: #0057ff;
-      text-decoration: none;
-    }
-    .cta-button {
+    .cta {
       display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
-      background-color: #0057ff;
+      margin-top: 30px;
+      background: #0057ff;
       color: white;
-      text-decoration: none;
+      padding: 12px 24px;
       border-radius: 8px;
+      text-decoration: none;
       font-size: 1em;
-      text-align: center;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>🔐 Générateur de Portefeuilles Crypto</h1>
+    <p>Hors-ligne, confidentiel, 100% sécurisé</p>
+  </header>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="tarifs.html">Tarifs & FAQ</a>
+  </nav>
   <div class="container">
-    <header>
-      <h1>🔐 Générateur de Portefeuilles Crypto Hors-Ligne</h1>
-      <p>Sécurisez vos cryptomonnaies avec des portefeuilles physiques indépendants de toute connexion.</p>
-      <img src="banner-wallet.png" alt="Bannière crypto cold wallet" class="banner">
-    </header>
+    <img src="banner-wallet.png" alt="Bannière wallet" class="banner">
+    <h2>✅ Ce que nous proposons :</h2>
+    <ul>
+      <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
+      <li>Export sur PDF, support papier ou tag NFC</li>
+      <li>Cryptos supportées : BTC, ETH, XMR, LTC, etc.</li>
+      <li>Standards BIP39 / BIP44 pour compatibilité complète</li>
+      <li>Sans stockage numérique — génération manuelle ou assistée</li>
+    </ul>
 
-    <section>
-      <h2> Ce que nous proposons :</h2>
-      <ul>
-        <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
-        <li>Export sur support papier, PDF ou tag NFC</li>
-        <li>Compatible avec Bitcoin (BTC), Ethereum (ETH), Monero (XMR), Litecoin (LTC) et autres</li>
-        <li>Basé sur les standards BIP officiels (BIP39, BIP44)</li>
-        <li>Aucune trace numérique conservée ou partagée</li>
-      </ul>
-    </section>
+    <h3>📬 Contact :</h3>
+    <p>Email : <a href="mailto:llaymass4@gmail.com">llaymass4@gmail.com</a></p>
+    <p>Telegram : <a href="https://t.me/t71y8" target="_blank">@t71y8</a></p>
 
-    <section class="contact">
-      <h2>📬 Contact :</h2>
-      <p>✉️ Email : <a href="mailto:llaymass4@gmail.com">llaymass4@gmail.com</a></p>
-      <p>📱 Telegram : <a href="https://t.me/t71y8" target="_blank">@t71y8</a></p>
-      <a href="mailto:llaymass4@gmail.com" class="cta-button">📩 Demander un portefeuille</a>
-    </section>
+    <a class="cta" href="mailto:llaymass4@gmail.com">📩 Demander un portefeuille</a>
   </div>
 </body>
 </html>
