--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </nav>
   <div class="container">
     <img src="banner-wallet.png" alt="Bannière wallet" class="banner">
-    <h2>✅ Ce que nous proposons :</h2>
+    <h2> Ce que nous proposons :</h2>
     <ul>
       <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
       <li>Export sur PDF, support papier ou tag NFC</li>
