--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Générateur de Cold Wallets</title>
+  <title>Générateur de Cold Wallets Crypto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: #f5f7fa;
       margin: 0;
       padding: 0;
-      background: #f6f9fc;
       color: #333;
     }
     header {
-      background: #0057ff;
+      background-color: #0057ff;
       color: white;
-      padding: 30px;
       text-align: center;
+      padding: 30px 20px;
     }
     nav {
-      background: #003bb3;
+      background-color: #003bb3;
       padding: 10px;
       text-align: center;
     }
@@ -32,47 +32,41 @@
     .container {
       max-width: 900px;
       margin: auto;
-      padding: 40px 20px;
-    }
-    .banner {
-      width: 100%;
-      max-width: 600px;
-      display: block;
-      margin: 20px auto;
-      border-radius: 12px;
+      padding: 30px 20px;
     }
     ul {
+      line-height: 1.8;
       font-size: 1.1em;
-      line-height: 1.6;
     }
-    .cta {
+    .cta-button {
       display: inline-block;
-      margin-top: 30px;
-      background: #0057ff;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 8px;
-      text-decoration: none;
+      margin-top: 20px;
+      padding: 12px 20px;
       font-size: 1em;
+      background-color: #2aabee;
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>🔐 Générateur de Portefeuilles Crypto</h1>
-    <p>Hors-ligne, confidentiel, 100% sécurisé</p>
+    <p>Cold wallets sécurisés pour Bitcoin, Ethereum, Monero, etc.</p>
   </header>
+
   <nav>
     <a href="index.html">Accueil</a>
     <a href="tarifs.html">Tarifs & FAQ</a>
   </nav>
+
   <div class="container">
-    <img src="banner-wallet.png" alt="Bannière wallet" class="banner">
     <h2> Ce que nous proposons :</h2>
     <ul>
-      <li>Portefeuilles papier avec phrase de récupération (12 ou 24 mots)</li>
-      <li>Export sur PDF, support papier ou tag NFC</li>
-      <li>Cryptos supportées : BTC, ETH, XMR, LTC, etc.</li>
+      <li>Wallet papier avec phrase de récupération (12 ou 24 mots)</li>
+      <li>Export PDF, papier ou tag NFC</li>
+      <li>Support multi-cryptos : BTC, ETH, XMR, LTC...</li>
       <li>Standards BIP39 / BIP44 pour compatibilité complète</li>
       <li>Sans stockage numérique — génération manuelle ou assistée</li>
     </ul>
@@ -81,7 +75,7 @@
     <p>Email : <a href="mailto:llaymass4@gmail.com">llaymass4@gmail.com</a></p>
     <p>Telegram : <a href="https://t.me/t71y8" target="_blank">@t71y8</a></p>
 
-    <a class="cta" href="mailto:llaymass4@gmail.com">📩 Demander un portefeuille</a>
+    <a class="cta-button" href="https://t.me/t71y8" target="_blank">📲 Commander via Telegram</a>
   </div>
 </body>
 </html>
