--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -52,8 +53,8 @@
 </head>
 <body>
   <header>
-    <h1>🔐 Générateur de Portefeuilles Crypto</h1>
-    <p>Cold wallets sécurisés pour Bitcoin, Ethereum, Monero, etc.</p>
+    <h1> Générateur de Portefeuilles Crypto</h1>
+    <p>Hors-ligne, confidentiel, 100% sécurisé</p>
   </header>
 
   <nav>
