--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -60,6 +59,8 @@
   <nav>
     <a href="index.html">Accueil</a>
     <a href="tarifs.html">Tarifs & FAQ</a>
+    <a href="blog/pourquoi-cold-wallet.html"> Pourquoi un cold wallet ?</a>
+    <a href="blog/fonctionnement-wallet.html">🔎 Fonctionnement</a>
   </nav>
 
   <div class="container">
